Wed May 28 23:07:18 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/server/server.c: fix possible NULL access

Wed May 28 22:07:18 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/freebcp.c src/apps/tsql.c:
	- fix minor memory leaks

Wed May 28 09:38:24 EDT 2008	JK Lowden <jklowden@freetds.org>
	* configure.ac src/apps/tsql.c
	- reset getopt(3) portably

Tue May 27 18:34:24 EDT 2008	JK Lowden <jklowden@freetds.org>
	* include/tds.h include arpa/inet.h

Mon May 26 14:47:43 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	(mostly from Coverity report)
	* include/tds.h: fix possible buffer overflow
	* include/tdsbytes.h: remove warning
	* src/apps/tsql.c src/dblib/bcp.c src/dblib/dblib.c:
	- remove some leaks
	* src/tds/mem.c: avoid deference of null pointer

Mon May 19 10:20:17 EDT 2008	JK Lowden <jklowden@freetds.org>
	* configure.ac	set version to  0.82.1
	* include/cspublic.h 
	- applied ML patch today for BLK_VERSION for sqsh

Wed May  7 18:56:39 EDT 2008	JK Lowden <jklowden@freetds.org>
	* configure.ac	RELEASE 0.82

Mon May  5 23:19:57 EDT 2008	JK Lowden <jklowden@freetds.org>
	* include/cstypes.h src/ctlib/ct.c
	- applied CS_BIGINT patch from Stephen Degler

Wed Apr 30 09:52:39 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c:
	- return proper diagnostic for truncation on SQLGetData

Sun Mar 23 17:03:48 EDT 2008	JK Lowden <jklowden@freetds.org>
	* configure.ac RC5

Sun Mar 23 17:01:13 EDT 2008	JK Lowden <jklowden@freetds.org>
	* doc/userguide.sgml clarified localization

Sun Mar 23 13:26:57 EDT 2008	JK Lowden <jklowden@freetds.org>
	* configure.ac doc/Makefile.am
	- applied ML patches from Johnny C. Lam for callout locations
	- and gnutls test. Posted RC4. 

Wed Mar 12 17:16:17 EDT 2008 JK Lowden <jklowden@freetds.org>
	* posted 0.82RC3

Tue Mar 11 09:26:03 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds_sysdep_private.h: win64 portability issue
