@@ -61,6 +61,7 @@ freeclose
 cursor3
 cursor4
 cursor5
+cursor6
 attributes
 hidden
 blob1
