@@ -1,4 +1,4 @@
-# $Id: Makefile.am,v 1.68.2.3 2008-02-29 09:23:51 freddy77 Exp $
+# $Id: Makefile.am,v 1.68.2.4 2008-06-06 16:52:23 freddy77 Exp $
 TESTS		=	\
 			t0001$(EXEEXT) t0002$(EXEEXT) t0003$(EXEEXT)\
 			t0004$(EXEEXT) connect$(EXEEXT) print$(EXEEXT)\
@@ -21,7 +21,7 @@ TESTS		=	\
 			connect2$(EXEEXT) timeout4$(EXEEXT) freeclose$(EXEEXT) \
 			cursor3$(EXEEXT) cursor4$(EXEEXT) cursor5$(EXEEXT) \
 			attributes$(EXEEXT) hidden$(EXEEXT) blob1$(EXEEXT) \
-			rowset$(EXEEXT)
+			rowset$(EXEEXT) cursor6$(EXEEXT)
 
 check_PROGRAMS	=	$(TESTS)
 
@@ -81,6 +81,7 @@ attributes_SOURCES	= attributes.c common.c common.h
 hidden_SOURCES	= hidden.c common.c common.h
 blob1_SOURCES	= blob1.c common.c common.h
 rowset_SOURCES	= rowset.c common.c common.h
+cursor6_SOURCES	= cursor6.c common.c common.h
 
 AM_CPPFLAGS	=	-I$(top_srcdir)/include $(ODBC_INC) -DFREETDS_SRCDIR=\"$(srcdir)\"
 if MINGW32
