@@ -1,3 +1,8 @@
+Fri Jun 06 18:41:50 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/odbc.c src/odbc/unittests/cursor6.c(added):
+	- backported cursor6 test and fix
+	- SQLFetch odbc 2 compliant
+
 Wed May 28 23:07:18 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/server/server.c: fix possible NULL access
 
@@ -172,4 +177,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2454.2.41 2008-05-28 21:08:03 freddy77 Exp $
+$Id: ChangeLog,v 1.2454.2.42 2008-06-06 16:52:21 freddy77 Exp $
